# DistributedFractals

./: .gitignore  CMakeLists.txt  README.md  whitepaper_esp.md
src/: camera.h  fractal.cpp  fractal.h  image_settings.h  main.cpp  master.cpp  master.h  worker.cpp  worker.h  worker_task.h
src/common/: color_mode.cpp  color_mode.h  common.cpp  common.h  fractal.cpp  fractal.h  image_utils.h  logging.cpp  logging.h  number.h  output_handler.cpp  output_handler.h  renderer.cpp  renderer.h
src/common/fractal_samplers/: julia_fractal_sampler.cpp  mandelbrot_fractal_sampler.cpp
src/common/settings/: camera.h  fractal_settings.h  output_settings.h  settings.h
src/parallel/: main.cpp  master.cpp  master.h  worker.cpp  worker.h  worker_task.cpp  worker_task.h
src/scripts/: fractal_viewer.py  image_server.py  interactive_visualizer.py  render.py  render_video.py  share_public_keys.sh  video_renderer.py
src/scripts/experiments/: experimentation.md  plot_statistics.py
src/scripts/experiments/bash_scripts/: parallel_run_B.sh  parallel_run_IMG.sh  parallel_run_ITER.sh  parallel_run_TYPE.sh  parallel_run_image_size.sh
src/scripts/experiments/plotting/: plot_bar_times.py  plot_parallel_times.py  plot_statistics_multiple.py  plot_time.py
src/sequential/: main.cpp
src/settings/: camera.h  fractal_settings.h  settings.h
src/tests/: image_save_test.cpp
whitepaper/: commands  header.tex  readme.md  whitepaper_esp.md
whitepaper/experiments/: parallel_execution_times.csv  sequential_execution_times.csv  speedup_summary.csv  summary_parallel.csv  summary_sequential.csv
whitepaper/experiments/block_size/: sequential_execution_times.csv
whitepaper/experiments/block_size_var/: parallel_execution_timesb128.csv  parallel_execution_timesb2.csv  parallel_execution_timesb32.csv  parallel_execution_timesb64.csv  parallel_execution_timesb8.csv  sequential_execution_times.csv  summary_parallelb128.csv  summary_parallelb16.csv  summary_parallelb2.csv  summary_parallelb32.csv  summary_parallelb4.csv  summary_parallelb64.csv
whitepaper/experiments/block_size_var/raw_data/: parallel_execution_timesb16.csv  parallel_execution_timesb32.csv  parallel_execution_timesb4.csv
whitepaper/experiments/block_size_var/speedups/: speedup_efficiencyb128.csv  speedup_efficiencyb16.csv  speedup_efficiencyb2.csv  speedup_efficiencyb32.csv  speedup_efficiencyb4.csv  speedup_efficiencyb64.csv  speedup_efficiencyb8.csv
whitepaper/experiments/block_size_var/summaries/: summary_parallelb8.csv  summary_sequential.csv
whitepaper/experiments/fractal_type_var/raw_data/: parallel_execution_timesTYPE0.csv  parallel_execution_timesTYPE1.csv
whitepaper/experiments/fractal_type_var/summaries/: summary_type_0.csv  summary_type_1.csv
whitepaper/experiments/image_size_var/: parallel_execution_timesIMG128.csv  parallel_execution_timesIMG512.csv  sequential_execution_timesIMG1080.csv
whitepaper/experiments/image_size_var/raw_data/: parallel_execution_timesIMG1080.csv  parallel_execution_timesIMG1920.csv  sequential_execution_timesIMG128.csv  sequential_execution_timesIMG1920.csv  sequential_execution_timesIMG512.csv
whitepaper/experiments/image_size_var/speedups/: speedup_summary1080.csv  speedup_summary128.csv  speedup_summary1920.csv  speedup_summary512.csv
whitepaper/experiments/image_size_var/summaries/: summary_parallel1080.csv  summary_parallel128.csv  summary_parallel1920.csv  summary_parallel512.csv  summary_sequential1080.csv  summary_sequential128.csv  summary_sequential1920.csv  summary_sequential512.csv
whitepaper/experiments/iter_size_var/raw_data/: parallel_execution_timesITER100.csv  parallel_execution_timesITER1000.csv  parallel_execution_timesITER500.csv
whitepaper/experiments/iter_size_var/summaries/: summary_ITER100.csv  summary_ITER1000.csv  summary_ITER500.csv  summary_iter_100.csv  summary_iter_1000.csv  summary_iter_500.csv
whitepaper/experiments/results/: parallel_execution_timesb128.csv  parallel_execution_timesb32.csv  sequential_execution_timesb128.csv
whitepaper/experiments/varying_block_sizes/raw_data/: parallel_execution_timesb16.csv  parallel_execution_timesb64.csv  sequential_execution_timesb16.csv  sequential_execution_timesb32.csv  sequential_execution_timesb64.csv
whitepaper/experiments/varying_block_sizes/speedups/: speedup_summaryb128.csv  speedup_summaryb32.csv  speedup_summaryb64.csv
whitepaper/experiments/varying_block_sizes/summaries/: summary_parallelb128.csv  summary_parallelb32.csv  summary_parallelb64.csv  summary_sequentialb128.csv  summary_sequentialb32.csv  summary_sequentialb64.csv
